--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://blog.ja-errorpro.cf/'
 languageCode = 'en-us'
 title = 'ErrorPro(黃乙家)'
 theme = "cactus"
