--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,11 @@ jobs:
   deploy:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true  # 找尋Hugo主題(true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-          patch: cactus
+      #- uses: actions/checkout@v2
+      #  with:
+       #   submodules: true  # 找尋Hugo主題(true OR recursive)
+       #   fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+        #  patch: cactus
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
