--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,16 @@ jobs:
   deploy:
     runs-on: ubuntu-20.04
     steps:
-      #- uses: actions/checkout@v2
-      #  with:
-       #   submodules: true  # 找尋Hugo主題(true OR recursive)
-       #   fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-        #  patch: cactus
+      - uses: actions/checkout@v2
+        with:
+          submodules: true  # 找尋Hugo主題(true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+          
+      - name: Get Theme
+        run: git submodule update --init --recursive
+      
+      - name: Update theme to Latest commit
+        run: git submodule update --remote --merge
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
