--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = '/'
 languageCode = 'en-us'
-title = 'ErrorPro(黃乙家)'
+title = 'ErrorPro'
 theme = "cactus"
 
 [permalinks]
@@ -57,7 +57,7 @@ weight = 5
 	googleAnalyticsAsync = true # use asynchronous tracking. Synchronous tracking by default
   
     # Home page settings
-    description = "我不會寫程式啊"
+    description = "站在雲林打魚打程式的普通高中生"
     mainSection = "posts" # your main section
     showAllPostsOnHomePage = false
     postsOnHomePage = 10
@@ -77,8 +77,12 @@ weight = 5
     css = ["css/highlight.css", "css/style-dark.css", "css/search.css"]
   
     [params.comments]
-    enabled = false # default
-    engine = "utterances" # more supported engines will be added.
+      enabled = true # default
+      engine = "cactus_comments" # more supported engines will be added.
+      [params.comments.cactuscomments]
+        siteName = "errorpro" # see https://cactus.chat/ on how to register your site name
+        #serverUrl = "" # Defaults to https://matrix.cactus.chat:8448 (Cactus Chat public server)
+        #serverName = "" # Defaults to cactus.chat
 	  
   
     # the value of name should be an valid font awesome icon name (brands type)
