--- a/config.toml
+++ b/config.toml
@@ -98,7 +98,7 @@ weight = 6
     link = "https://www.facebook.com/errorpro05"
     [[params.social]]
     name = "ice-cream"
-    link = "https://shorturl.at/mzCNS"
+    link = "https://bit.ly/3D66h7j"
     [[params.social]]
     name = "email"
     link = "u810025@gmail.com"  # no need for "mailto:" in the head
