Friendlier Copy to clipboard

--- a/config.toml
+++ b/config.toml
@@ -51,7 +51,7 @@ weight = 6
     hl_Lines = ""
     lineNoStart = 1
     lineNos = true
-    lineNumbersInTable = false
+    lineNumbersInTable = true
     noClasses = true
     style = "dracula"
     tabWidth = 4
