--- a/config.toml
+++ b/config.toml
@@ -102,11 +102,20 @@ weight = 6
 	[[params.social]]
 	name = "github"
 	link = "https://github.com/ja-errorpro"
+	[[params.social]]
+	name = "discord"
+	link = "https://discordapp.com/users/430940209975132160"
     [[params.social]]
-    name = "question"
+    name = "youtube"
     link = "https://bit.ly/3D66h7j"
+	[[params.social]]
+    name = "google"
+    link = "https://g.dev/CompileErr0r"
+	[[params.social]]
+	name = "twitter"
+	link = "https://twitter.com/CompileErr0r"
     [[params.social]]
     name = "email"
-    link = "u810025@gmail.com"  # no need for "mailto:" in the head
+    link = "yijiahuang@ja-errorpro.cf"  # no need for "mailto:" in the head
 [outputs]
     home = ["HTML", "RSS", "JSON"]
