--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = '/'
 languageCode = 'en-us'
 title = 'ErrorPro'
 theme = "cactus"
+timeZone = "Asia/Taipei"
 
 [permalinks]
 posts = "/posts/:year/:filename/"
@@ -73,6 +74,7 @@ weight = 6
   
     # https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
     dateFormat = "2006-01-02" # default
+	
   
     # Post page settings
     show_updated = false # default
